From release 0.0.3:
 - Bump version number to 0.1.0-devel
 - Support emissive oceans and rivers (including POV save)
 - Fix .inc filename bug (spurious ")
 - Update docs
 - Viewer to separate top-level.
 - Don't burn CPU when OpenGL area not visible.
 - Crude flight-simulator mode

From release 0.0.1:
 - Bump version number to 0.0.3 (0.0.2 omitted docs)
 - Add fracplanet.htm, fracplanet.css user documentation.
 - Minor changes to code (compiles on RH9)
 - Tweak doxygen.cfg 
 - Display list option
 - Frame rate display
 - VERSION and mktgz done evolvotron style

From release 0.0.0:
 - CHANGES file added.
 - lake_becomes_sea initialisation changed from 5 to 0.05 (so displays "5" on controls instead of "100").
 - Remove .qmake.internal.cache from CVS control (don't you just HATE it when that happens)
 - Move hardwired colours into ParametersTerrain class (in anticipation of control from GUI).
 - Add colour picking to GUI.
 - Bump version number to 0.0.1 (appears only in control_about.cpp)
 - Generated .pov file correctly includes basename.inc (was always including terrain.inc before).
