@@ -42,7 +42,6 @@ int main(int argc,char* argv[])
 
   FracplanetMain*const main_widget=new FracplanetMain(0);
 
-  //main_widget->resize(800,600);
   app.setMainWidget(main_widget);
   main_widget->show();
 
